add log4jdbc and add mybatis setting

--- a/mybatis/src/main/resources/application.properties
+++ b/mybatis/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.xa.data-source-class-name=org.h2.driver
-spring.datasource.url=jdbc:h2:tcp://localhost:9092/C:\\SHIS\\localdb\\ehr\\EHR;SCHEMA=SEHRMGR;MODE=Oracle;
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.driver-class-name=org.h2.driver
+spring.datasource.url=jdbc:log4jdbc:h2:tcp://localhost:9092/C:\\SHIS\\localdb\\ehr\\EHR;SCHEMA=SEHRMGR;MODE=Oracle;
 spring.datasource.username=sehrmgr
 spring.datasource.password=1234
+
+mybatis.configuration.map-underscore-to-camel-case=true
 
 
