--- a/mybatis/src/main/resources/application.properties
+++ b/mybatis/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.username=sehrmgr
 spring.datasource.password=1234
 
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis.type-aliases-package=my.study.**.entity,my.study.**.dvo
 
 
